syntax = "proto3";

package dolthub.bounties.payments.v1alpha1;

option go_package = "github.com/dolthub/bounties/go/gen/proto/dolthub/bounty/payments/v1alpha1;payments";

// there are a lot of restrictions on map keys and repeated maps or repeated arrays.  As a result I'm using two arrays
// to represent maps in serveral cases, and each map is put in it's own message

message HashToIndex {
    repeated bytes past_hashes = 1;
    repeated int32 past_commit_indexes = 2;
}

message CellAttribution {
    int32 commit_idx = 1;
    HashToIndex past_values = 2;
}

message TagToCellAttribution {
    repeated uint64 tags = 1;
    repeated CellAttribution cell_att = 2;
}

message PKHashToTagToCellAttribution {
    repeated bytes pk_hashes = 1;
    repeated TagToCellAttribution tag_to_cell = 2;
}

message TableAttribution {
    PKHashToTagToCellAttribution row_attribution = 1;
    map<int32, uint32> commit_to_count = 2;
    uint64 attributed_cells = 3;
}

message CellwiseDBAttribution {
    bytes start_hash = 1;
    repeated bytes commits = 2;
    map<string, TableAttribution> name_to_table_att = 3;
}